<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thermostat"
    android:gravity="top|right" >

    <TextView
        android:id="@+id/Bagles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/levelSelect"
        android:layout_marginTop="130dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top|left"
        android:text="@string/zero_allowed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/levelET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:ems="3"
        android:gravity="center_vertical|center_horizontal|center"
        android:inputType="number"
        android:maxLength="1"
        android:text="3"
        android:textColor="@android:color/background_dark" >

        <requestFocus />
    </EditText>

    <ToggleButton
        android:id="@+id/zeroToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/levelSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zeroToggleButton"
        android:layout_toLeftOf="@+id/levelET"
        android:text="@string/level"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Play_ass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/play_ass"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <Button
        android:id="@+id/Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Play_ass"
        android:layout_alignParentRight="true"
        android:text="@string/play"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/TvHowTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Bagles"
        android:layout_below="@+id/Bagles"
        android:text="@string/how_to"
        android:textColor="@android:color/background_dark"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/soundTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:checked="true"
        android:textOff="@string/sound"
        android:textOn="@string/sound" />

</RelativeLayout>