<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60000000" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/guessEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="123"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@android:color/background_light"
                android:gravity="center_horizontal"
                android:background="@android:color/transparent" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/guessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="check"
                android:text="@string/guessBtn"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >            

            <TextView
                android:id="@+id/alertTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Instruction"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/lives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lives"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/history"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</ScrollView>